--- a/custom_components/ecl_modbus/manifest.json
+++ b/custom_components/ecl_modbus/manifest.json
@@ -2,11 +2,10 @@
   "domain": "ecl_modbus",
   "name": "ECL Modbus",
   "version": "0.1.0",
-  "documentation": "https://github.com/dit-brugernavn/ecl_modbus", 
+  "documentation": "https://github.com/nichlasrohde/ha-ecl-modbus",
   "requirements": [],
-  "dependencies": [],
-  "codeowners": ["@dit-github-brugernavn"],
+  "codeowners": ["@nichlasrohde"],
+  "config_flow": true,
   "iot_class": "local_polling",
-  "integration_type": "hub",
-  "config_flow": true
+  "integration_type": "hub"
 }
