--- a/custom_components/ecl_modbus/manifest.json
+++ b/custom_components/ecl_modbus/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "ecl_modbus",
   "name": "ECL Modbus",
-  "version": "0.5.7",
+  "version": "0.5.8",
   "documentation": "https://github.com/nichlasrohde/ha-ecl-modbus",
   "requirements": [],
   "codeowners": ["@nichlasrohde"],
   "config_flow": true,
   "iot_class": "local_polling",
-  "integration_type": "hub"
+  "integration_type": "hub",
+  "icon": "icon.png"
 }
